fixed search scrollbar and color

--- a/components/search-card/index.css
+++ b/components/search-card/index.css
@@ -4,6 +4,12 @@
   box-sizing: border-box;
 }
 .body-search {
+  background-color: #121212;
+  color: white;
+  font-size: 38px;
+  overflow-y: scroll;
+  overflow-x: hidden;
+  padding-left: 10px;
   font-size: 16px;
   color: white;
   font-family: var(
@@ -16,20 +22,25 @@
     CircularSp-Deva,
     var(--fallback-fonts, sans-serif)
   );
-
+  /*  */
   overflow-x: hidden;
 }
+.body-search::-webkit-scrollbar {
+  width: 10px;
+}
 
+.body-search::-webkit-scrollbar-thumb {
+  background-color: rgb(100, 100, 100);
+}
+
+.body-search::-webkit-scrollbar-track {
+  background-color: transparent;
+}
 .search-card {
-  background-color: #121212;
   height: auto;
   padding-top: 20px;
   /*   padding-block: 16px;
  */
-}
-
-.content {
-  padding-inline: 24px;
 }
 
 .sfoglia {
